# hargyllcms

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  RELEASE  configure.ac
contrib/: argyllcms.spec  backport-colorhug-compat-fix.patch  disable-XScreenSaverQueryExtension.patch  disable-chromecast-support.patch  disable-ucmm-as-no-yajl.patch  enable-colorhug-by-default.patch  fix-non-chromecast-build.patch  no-ATTRIBUTE_NORETURN.patch  no-comments-in-yajl-upstream.patch  remove-obsolete-udev-sections.patch
doc/: Makefile.am
icc/: .gitignore  Makefile.am
imdi/: Makefile.am
lib/: Makefile.am
libusb/: Makefile.am
plot/: Makefile.am
ref/: Makefile.am
tools/: .gitignore  Makefile.am
usb/: Makefile.am
