## Process this file with automake to produce Makefile.in

SUBDIRS =						\
	libusb						\
	lib						\
	cgats						\
	doc						\
	gamut						\
	h						\
	icc						\
	link						\
	jcnf						\
	numlib						\
	plot						\
	profile						\
	ref						\
	render						\
	rspl						\
	scanin						\
	spectro						\
	target						\
	tweak						\
	xicc						\
	tools

snapshot:
	$(MAKE) dist distdir=$(PACKAGE)-$(VERSION)-`date +"%Y%m%d"`

EXTRA_DIST = Readme.txt ttbd.txt log.txt legal.sh
