## Process this file with automake to produce Makefile.in

docdir = $(datadir)/doc/argyll

doc_DATA =						\
	applycal.html					\
	ArgyllDoc.html					\
	ArgyllFlow.jpg					\
	ArgyllFlowThumb.jpg				\
	average.html					\
	cal_format.html					\
	calvschar.html					\
	cb2ti3.html					\
	ccmxs.html					\
	cctiff.html					\
	ccxxmake.html					\
	ChangesSummary.html				\
	chartread.html					\
	Chroma4.jpg					\
	cht_format.html					\
	CMP_Digital_Target-3.jpg			\
	CMP_DT_003.jpg					\
	collink.html					\
	colorchecker.jpg				\
	ColorManagement.html				\
	ColorMunkiCreate.jpg				\
	ColorMunki.jpg					\
	colprof.html					\
	Compiling.html					\
	CRTspectrum.jpg					\
	CrushedDisplyBlacks.html			\
	cube.jpg					\
	DC.jpg						\
	dispcal.html					\
	dispprofloc.html				\
	dispread.html					\
	dispwin.html					\
	DocLicense.txt					\
	DTP20.jpg					\
	DTP22.jpg					\
	DTP41.jpg					\
	DTP51.jpg					\
	DTP92.jpg					\
	DTP94.jpg					\
	Environment.html				\
	evalInputTargets.html				\
	extracticc.html					\
	extractttag.html				\
	fakeCMY.html					\
	fakeread.html					\
	File_Formats.html				\
	filmread.html					\
	filmtarg.html					\
	Fluorescent.jpg					\
	FWA.html					\
	FWA_measure.jpg					\
	gamma.html					\
	gamutmapping1.jpg				\
	greytiff.html					\
	HCFR.jpg					\
	HCT.jpg						\
	HiResLaser.jpg					\
	Huey.jpg					\
	i1d3_1.jpg					\
	i1d3_2.jpg					\
	i1d.jpg						\
	i1m.jpg						\
	i1p.jpg						\
	i1proDriver.html				\
	i1proDriver.xls					\
	i1scan14.jpg					\
	iccdump.html					\
	iccgamut.html					\
	iccgamutmapping.html				\
	icclu.html					\
	illumread_1.jpg					\
	illumread_2.jpg					\
	illumread_3.jpg					\
	illumread_4.jpg					\
	illumread_5.jpg					\
	illumread_6.jpg					\
	illumread.html					\
	Installing.html					\
	Installing_Linux.html				\
	Installing_MSWindows.html			\
	Installing_OSX.html				\
	instruments.html				\
	invprofcheck.html				\
	Kgraph1.jpg					\
	Kgraph2.jpg					\
	Kgraph3.jpg					\
	Kgraph4.jpg					\
	Kgraph5.jpg					\
	Kgraph6.jpg					\
	Kgraph7.jpg					\
	Kgraph8.jpg					\
	kodak2ti3.html					\
	Kparams.jpg					\
	LabSteps.jpg					\
	License2.txt					\
	License3.txt					\
	License.txt					\
	Limitations.html				\
	LSDC.jpg					\
	MinorTools.html					\
	monitorcontrols.html				\
	mox.jpg						\
	moxxr.jpg					\
	mppcheck.html					\
	mpplu.html					\
	mppprof.html					\
	Organisation.html				\
	Overview.html					\
	Performance.html				\
	printcal.html					\
	printtarg.html					\
	profcheck.html					\
	Q60.jpg						\
	refine.html					\
	revfix.html					\
	scanin.html					\
	Scenarios.html					\
	SG_footer.txt					\
	SG_header.txt					\
	SG.jpg						\
	sl.jpg						\
	Source.html					\
	spec2cie.html					\
	specplot.html					\
	splitti3.html					\
	spotread.html					\
	Spyd2.jpg					\
	Spyd3.jpg					\
	Spyd3x.jpg					\
	Spyd4.jpg					\
	SpyderChecker.jpg				\
	srgbplot.gif					\
	ss.jpg						\
	surface.jpg					\
	synthcal.html					\
	synthread.html					\
	targen.html					\
	ti3_format.html					\
	tiffgamut.html					\
	timage.html					\
	txt2ti3.html					\
	ucmm.html					\
	verify.html					\
	viewgam.html					\
	WideGamutColmters.html				\
	xicclu.html					\
	YellowGreen.jpg

EXTRA_DIST =						\
	$(doc_DATA)

