## Process this file with automake to produce Makefile.in

refdir = $(datadir)/color/argyll/ref

ref_DATA =						\
	3dap5k.sp					\
	ccxx.ti1					\
	CIE_C.sp					\
	ClayRGB1998.icm					\
	CMP_Digital_Target-3.cht			\
	CMP_Digital_Target-3.cie			\
	CMP_Digital_Target-3.ti2			\
	CMP_DT_003.cht					\
	ColorChecker.cht				\
	ColorChecker.cie				\
	ColorCheckerDC.cht				\
	ColorCheckerSG.cht				\
	ColorChecker.ti2				\
	CRT.ccss					\
	D50_0.0.sp					\
	D50_0.1.sp					\
	D50_0.3.sp					\
	D50_0.5.sp					\
	D50_0.7.sp					\
	D50_1.0.sp					\
	D50_1.2.sp					\
	D50_1.5.sp					\
	D50_1.7.sp					\
	D50_2.0.sp					\
	D50_2.5.sp					\
	D50_3.0.sp					\
	ECI2002R.ti2					\
	ECI2002.ti2					\
	example121.sp					\
	example.sp					\
	FograStrip2.ti1					\
	FograStrip2_2.ti2				\
	FograStrip3.ti1					\
	FograStrip3_3.ti2				\
	GTIPlus.sp					\
	Hutchcolor.cht					\
	i1_RGB_Scan_1.4.cht				\
	i1_RGB_Scan_1.4.ti2				\
	it8.cht						\
	lab2lab.icm					\
	LaserSoftDCPro.cht				\
	linear.cal					\
	Makefile.am					\
	Office.sp					\
	QPcard_201.cht					\
	QPcard_201.cie					\
	SOtele.sp					\
	SpyderChecker.cht				\
	SpyderChecker.cie				\
	sRGB.icm					\
	strange.cal					\
	TruluxPlus.sp					\
	Trulux.sp

EXTRA_DIST =						\
	$(ref_DATA)

