## Process this file with automake to produce Makefile.in

chtdir = $(datadir)/color/argyll/ref
cht_DATA =						\
	CMP_Digital_Target-3.cht			\
	CMP_DT_003.cht					\
	ColorChecker.cht				\
	ColorCheckerDC.cht				\
	ColorCheckerPassport.cht			\
	ColorCheckerSG.cht				\
	Hutchcolor.cht					\
	i1_RGB_Scan_1.4.cht				\
	it8.cht						\
	LaserSoftDCPro.cht				\
	QPcard_201.cht					\
	QPcard_202.cht					\
	SpyderChecker.cht

ciedir = $(datadir)/color/argyll/ref
cie_DATA =						\
	CMP_Digital_Target-3.cie			\
	ColorChecker.cie				\
	ColorCheckerPassport.cie			\
	QPcard_201.cie					\
	QPcard_202.cie					\
	SpyderChecker.cie

refdir = $(datadir)/color/argyll/ref
ref_DATA =						\
	3dap5k.sp					\
	ccxx.ti1					\
	CIE_C.sp					\
	ClayRGB1998.icm					\
	CMP_Digital_Target-3.ti2			\
	ColorChecker.ti2				\
	ColorCheckerDC.ti2				\
	CRT.ccss					\
	D50_0.0.sp					\
	D50_0.1.sp					\
	D50_0.3.sp					\
	D50_0.5.sp					\
	D50_0.7.sp					\
	D50_1.0.sp					\
	D50_1.2.sp					\
	D50_1.5.sp					\
	D50_1.7.sp					\
	D50_2.0.sp					\
	D50_2.5.sp					\
	D50_3.0.sp					\
	F1.sp					\
	F5.sp					\
	F8.sp					\
	EBU3213_PAL.icm					\
	ECI2002R.ti2					\
	ECI2002.ti2					\
	example121.sp					\
	example.sp					\
	FograStrip2.ti1					\
	FograStrip2_2.ti2				\
	FograStrip3.ti1					\
	FograStrip3_3.ti2				\
	GTIPlus.sp					\
	i1_RGB_Scan_1.4.ti2				\
	lab2lab.icm					\
	linear.cal					\
	Makefile.am					\
	Office.sp					\
	ProPhoto.icm					\
	ProPhotoLin.icm					\
	Rec709.icm					\
	Rec2020.icm					\
	SMPTE_RP145_NTSC.icm				\
	SMPTE431_P3.icm					\
	SOtele.sp					\
	sRGB.icm					\
	strange.cal					\
	TruluxPlus.sp					\
	Trulux.sp

EXTRA_DIST =						\
	$(cht_DATA)					\
	$(cie_DATA)					\
	$(ref_DATA)

